--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
     <button class="btn-sucess" id="currencyConvert">Submit</button>
     <div class="showConverter"></div>
     <h1>European Currencies</h1>
+    <select name= "currency" id= "currency">
+      <option value = "EUR">EUR</option>
+      <option value = "ALL">ALL</option>
+      <option value = "AMD">AMD</option>
+      <option value = "AZN">AZN</option>
+      <option value = "BYN">BYN</option>
+    </select>
     <div class="showCurrency"></div>
     <div class="showErrors"></div>
 </body>
